--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Susmitha's Portfolio</title>
+    <title>Krishna's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <!-- boxicon css link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -13,7 +13,7 @@
 <body>
     <div class="overlay"></div>
     <header>
-        <a href="#" class="logo"><span>Susmitha</span> Gopavarapu</a>
+        <a href="#" class="logo"><span>Krishna Vardhan</span> Battu</a>
         <ul class="navlist">
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#skills">Skills</a></li>
@@ -30,8 +30,8 @@
 
     <section class="home" id="home">
         <div class="hero-info">
-            <h3>Welcome To my World</h3>
-            <h1>Hi I'm Susmitha</h1>
+            <h3>Welcome To my page</h3>
+            <h1>Hi I'm Krishna</h1>
 
             <div class="text-animate">
                 <h2>Data Engineer</h2>
