--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
                 <h2>Data Engineer</h2>
             </div>
 
-            <p>A proficient Data Engineer with 4 years of hands-on experience, adept at architecting and optimizing end-to-end data
-                solutions. Skilled in creating robust ETL pipelines, harnessing Python expertise for automation and efficiency, and
-                conducting thorough data analysis to extract actionable insights.</p>
+            <p>Experienced and versatile Data Engineer with over 9 years of hands-on experience in 
+                designing, implementing, and managing large-scale data infrastructure solutions.
+                Proficient in a wide range of cloud and big data technologies, including AWS, Azure, GCP, Hadoop, Spark, Kafka, and SQL/NoSQL databases. 
+                Skilled in data pipeline architecture, ETL processes, data warehousing, and real-time data processing.</p>
 
             <!-- <div class="btn-box">
-                <a href="ramyavardineni@gmail.com" class="btn">Download CV! <i class='bx bx-right-arrow-alt' ></i></a>
+                <a href="krishnaengineer312@gmail.com" class="btn">Download CV! <i class='bx bx-right-arrow-alt' ></i></a>
             </div> -->
             <div class="cvContent">
                 <a href="img/Resume_Ramya.pdf" target="_blank" class="btn d-CV">Download CV <i class='bx bx-download'></i></a>
@@ -50,7 +51,7 @@
 
             <div class="social-media">
                 <div class="bg-icon">
-                    <a href="https://www.linkedin.com/in/susmitha- gopavarapu"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.linkedin.com/in/krishna-b-05a15a2ba/"><i class='bx bxl-linkedin'></i></a>
                     <span></span>
                 </div>
 
@@ -60,7 +61,7 @@
                 </div>
 
                 <div class="bg-icon">
-                    <a href="gopavarapususmitha39@gmail.com"><i class='bx bxl-gmail'></i></a>
+                    <a href="krishnaengineer312@gmail.com"><i class='bx bxl-gmail'></i></a>
                     <span></span>
                 </div>
             </div>
