--- a/index.html
+++ b/index.html
@@ -426,55 +426,67 @@
     <section class="about" id="about">
         <div class="about-content">
             <h2 class="heading">My Experience</h2>
-            <h3>Aaratech Inc </h3>
+            <h3>Wells Fargo </h3>
 
             <div class="content-btn">
                 <div class="content">
                     <div class="text-box">
-                    <span>Data Engineer Intern  (May 2023 - Aug 2023)</span>
-                    <p>Led implementation of scalable data warehousing on Azure with Azure Synapse Analytics, cutting processing
-                        durations by 30%.
-                        • Designed Azure Blob Storage solutions, reducing costs by 20%.
-                        • Implemented Apache Kafka for real-time data streaming, improving ingestion rates by 40% and reducing latency
-                        by 25%.
-                        • Created ETL pipelines on Azure with Azure Data Factory, reducing processing time by 30% and increasing data
-                        accuracy by 25%.</p>
+                    <span> Data Engineer  (May 2022 - Present)</span>
+                    <p> Deployed and configured AWS services such as AWS Redshift, AWS S3, and AWS Data Pipelines for scalable and reliable data storage and processing.
+                    Developed and maintained data transformation jobs using AWS Glue to prepare data for analysis and reporting.
+                    Implemented data warehousing solutions using AWS Redshift, optimizing performance and scalability for analytical workloads.
+                    Skilled in designing, architecting, and implementing analytics solutions and models using various technologies such as Spark, Snowflake, and Hadoop.</p>
                  </div>
             </div> 
             <br>
 
-            <h3>Wipro Technologies LTD</h3>
+            <h3> Mayo Clinic </h3>
 
             <div class="content-btn">
                 <div class="content">
                     <div class="text-box">
-                    <span>Data Engineer (Nov 2020 - Jan 2022)</span>
-                    <p>Utilized Apache Spark for efficient large dataset processing, reducing time by 40% 
-                        and enhancing data accuracy by 20%.Managed PostgreSQL, MySQL, and SQL Server databases,
-                         optimizing queries for a 25% reduction in execution time.Developed automation scripts
-                          in Python, cutting manual data cleaning efforts by 40%. Deployed real-time
-                         streaming data ingestion pipeline on Azure, boosting throughput by 50%.
-                         Implemented Snowflake and Starflake schema for data warehousing,
-                          reducing query response time by 25% and improving storage efficiency by 30%. </p>
+                    <span>Data Engineer (Feb 2020 - Apr 2022)</span>
+                    <p> Designed and implemented scalable data pipelines using GCP DataProc and GCP BigQuery to process patient data, ensuring secure and efficient data handling for medical research.
+                        Utilized Pyspark for complex data processing tasks, improving the accuracy of patient diagnosis and treatment plans.
+                        Implemented data transformation and cleansing processes using Apache Beam for batch and streaming data.
+                        Integrated SAS with GCP BigQuery to perform advanced statistical analysis, aiding in the development of innovative treatment methods.
+                        Implemented secure data storage solutions using GCS, ensuring the protection of sensitive patient information.
+                        Automated data flows using GCP DataFlow and Cloud DataPrep, streamlining data processing workflows.</p>
                  </div>
             </div>
         </div>
         <br>
 
-        <h3>Gebbs Technologies LTD</h3>
+        <h3> Nationwide </h3>
 
             <div class="content-btn">
                 <div class="content">
                     <div class="text-box">
-                    <span>Data Analyst (June 2018 - Sep 2020)</span>
-                    <p>Created dynamic visualizations and dashboards with Amazon QuickSight and Power BI, boosting data visual-
-                        ization effectiveness by 20% and enabling better decision-making.
-                         Automated report generation using AWS Data Pipeline and Amazon S3, halving reporting time and ensuring
-                        timely delivery of critical insights.
-                         Leveraged Python and pandas for large dataset processing, cutting data processing time by 30%. </p>
+                    <span> Data Engineer (June 2018 - Jan 2020)</span>
+                    <p> Designed and implemented scalable data solutions on Azure using Azure Data Factory, Azure Data Lake, and Azure Data Bricks, leveraging Hadoop technologies such as HDFS, MapReduce, and Spark.
+                        Developed ETL processes using Talend to extract, transform, and load data from various sources including PostgreSQL, MySQL, Oracle, and MongoDB into Azure environments.
+                        Implemented real-time data processing solutions using Apache Kafka and Spark Streaming on Databricks platform for efficient data ingestion and processing.
+                        Developed and maintained real-time analytics solutions using Azure Stream Analytics and Azure Event Hubs for processing streaming data at scale.
+                        Utilized Azure Kubernetes Service (AKS) for containerized deployment of data processing applications, ensuring scalability and portability across cloud and on-premises environments.</p>
                  </div>
             </div>
         </div>
+
+            <h3> Pennant Technologies </h3>
+
+            <div class="content-btn">
+                <div class="content">
+                    <div class="text-box">
+                    <span> ETL Developer (Feb 2016 - March 2018)</span>
+                    <p> Led the installation, configuration, and maintenance of Apache Hadoop clusters, managing key ecosystem components.
+                        Established a high-performance six-node CDH4 Hadoop Cluster on CentOS.
+                        Enabled efficient data transfer between HDFS, Hive, and RDBMS sources using Sqoop.
+                        Orchestrated complex data processing workflows with Oozie, automating execution of MapReduce and Pig jobs.
+                        Streamlined data analysis by importing log files into HDFS via Flume and organizing them in Hive tables.</p>
+                 </div>
+            </div>
+        </div>
+
     </section>
 
     <section class="services" id="services">
