--- a/index.html
+++ b/index.html
@@ -429,10 +429,12 @@
                 <div class="content">
                     <div class="text-box">
                     <span> Data Engineer  (May 2022 - Present)</span>
-                    <p> Deployed and configured AWS services such as AWS Redshift, AWS S3, and AWS Data Pipelines for scalable and reliable data storage and processing.
-                    Developed and maintained data transformation jobs using AWS Glue to prepare data for analysis and reporting.
-                    Implemented data warehousing solutions using AWS Redshift, optimizing performance and scalability for analytical workloads.
-                    Skilled in designing, architecting, and implementing analytics solutions and models using various technologies such as Spark, Snowflake, and Hadoop.</p>
+                    <ul>
+                        <li>Deployed and configured AWS services such as AWS Redshift, AWS S3, and AWS Data Pipelines for scalable and reliable data storage and processing.</li>
+                        <li>Developed and maintained data transformation jobs using AWS Glue to prepare data for analysis and reporting.</li>
+                        <li>Implemented data warehousing solutions using AWS Redshift, optimizing performance and scalability for analytical workloads.</li>
+                        <li>Skilled in designing, architecting, and implementing analytics solutions and models using various technologies such as Spark, Snowflake, and Hadoop.</li>
+                    </ul>
                  </div>
             </div> 
             <br>
