--- a/index.html
+++ b/index.html
@@ -443,12 +443,14 @@
                 <div class="content">
                     <div class="text-box">
                     <span>Data Engineer (Feb 2020 - Apr 2022)</span>
-                    <p> Designed and implemented scalable data pipelines using GCP DataProc and GCP BigQuery to process patient data, ensuring secure and efficient data handling for medical research.
-                        Utilized Pyspark for complex data processing tasks, improving the accuracy of patient diagnosis and treatment plans.
-                        Implemented data transformation and cleansing processes using Apache Beam for batch and streaming data.
-                        Integrated SAS with GCP BigQuery to perform advanced statistical analysis, aiding in the development of innovative treatment methods.
-                        Implemented secure data storage solutions using GCS, ensuring the protection of sensitive patient information.
-                        Automated data flows using GCP DataFlow and Cloud DataPrep, streamlining data processing workflows.</p>
+                  <ul>
+                      <li>Designed and implemented scalable data pipelines using GCP DataProc and GCP BigQuery to process patient data, ensuring secure and efficient data handling for medical research.</li>
+                      <li>Utilized Pyspark for complex data processing tasks, improving the accuracy of patient diagnosis and treatment plans.</li>
+                      <li>Implemented data transformation and cleansing processes using Apache Beam for batch and streaming data.</li>
+                      <li>Integrated SAS with GCP BigQuery to perform advanced statistical analysis, aiding in the development of innovative treatment methods.</li>
+                      <li>Implemented secure data storage solutions using GCS, ensuring the protection of sensitive patient information.</li>
+                      <li>Automated data flows using GCP DataFlow and Cloud DataPrep, streamlining data processing workflows.</li>
+                  </ul>
                  </div>
             </div>
         </div>
@@ -458,11 +460,13 @@
                 <div class="content">
                     <div class="text-box">
                     <span> Data Engineer (June 2018 - Jan 2020)</span>
-                    <p> Designed and implemented scalable data solutions on Azure using Azure Data Factory, Azure Data Lake, and Azure Data Bricks, leveraging Hadoop technologies such as HDFS, MapReduce, and Spark.
-                        Developed ETL processes using Talend to extract, transform, and load data from various sources including PostgreSQL, MySQL, Oracle, and MongoDB into Azure environments.
-                        Implemented real-time data processing solutions using Apache Kafka and Spark Streaming on Databricks platform for efficient data ingestion and processing.
-                        Developed and maintained real-time analytics solutions using Azure Stream Analytics and Azure Event Hubs for processing streaming data at scale.
-                        Utilized Azure Kubernetes Service (AKS) for containerized deployment of data processing applications, ensuring scalability and portability across cloud and on-premises environments.</p>
+                    <ul>
+                        <li>Designed and implemented scalable data solutions on Azure using Azure Data Factory, Azure Data Lake, and Azure Data Bricks, leveraging Hadoop technologies such as HDFS, MapReduce, and Spark.</li>
+                        <li>Developed ETL processes using Talend to extract, transform, and load data from various sources including PostgreSQL, MySQL, Oracle, and MongoDB into Azure environments.</li>
+                        <li>Implemented real-time data processing solutions using Apache Kafka and Spark Streaming on Databricks platform for efficient data ingestion and processing.</li>
+                        <li>Developed and maintained real-time analytics solutions using Azure Stream Analytics and Azure Event Hubs for processing streaming data at scale.</li>
+                        <li>Utilized Azure Kubernetes Service (AKS) for containerized deployment of data processing applications, ensuring scalability and portability across cloud and on-premises environments.</li>
+                    </ul>
                  </div>
             </div>
         </div>
@@ -471,11 +475,13 @@
                 <div class="content">
                     <div class="text-box">
                     <span> ETL Developer (Feb 2016 - March 2018)</span>
-                    <p> Led the installation, configuration, and maintenance of Apache Hadoop clusters, managing key ecosystem components.
-                        Established a high-performance six-node CDH4 Hadoop Cluster on CentOS.
-                        Enabled efficient data transfer between HDFS, Hive, and RDBMS sources using Sqoop.
-                        Orchestrated complex data processing workflows with Oozie, automating execution of MapReduce and Pig jobs.
-                        Streamlined data analysis by importing log files into HDFS via Flume and organizing them in Hive tables.</p>
+                    <ul>
+                        <li>Led the installation, configuration, and maintenance of Apache Hadoop clusters, managing key ecosystem components.</li>
+                        <li>Established a high-performance six-node CDH4 Hadoop Cluster on CentOS.</li>
+                        <li>Enabled efficient data transfer between HDFS, Hive, and RDBMS sources using Sqoop.</li>
+                        <li>Orchestrated complex data processing workflows with Oozie, automating execution of MapReduce and Pig jobs.</li>
+                        <li>Streamlined data analysis by importing log files into HDFS via Flume and organizing them in Hive tables.</li>
+                    </ul>
                  </div>
             </div>
         </div>
@@ -484,12 +490,14 @@
                 <div class="content">
                     <div class="text-box">
                     <span> SQL Developer (Oct 2014 - Jan 2016)</span>
-                    <p> Created custom User Defined Functions (UDFs) in Hive to efficiently transform large volumes of data based on business needs.
-                        Translated business requirements into new T-SQL stored procedures within Visual Studio for database projects.
-                        Developed Pig Scripts, Pig UDFs, Hive Scripts, and Hive UDFs to efficiently load data files.
-                        Developed the presentation layer using HTML, CSS, JSPs, Bootstrap, and AngularJS.
-                        Applied J2EE design patterns such as DTO, DAO, Command, and Singleton for better code organization and maintenance.
-                        Implemented Object-Relation Mapping (ORM) in the persistence layer using Hibernate framework integrated with Spring functionality.</p>
+                    <ul> 
+                        <li>Created custom User Defined Functions (UDFs) in Hive to efficiently transform large volumes of data based on business needs.</li>
+                        <li>Translated business requirements into new T-SQL stored procedures within Visual Studio for database projects.</li>
+                        <li>Developed Pig Scripts, Pig UDFs, Hive Scripts, and Hive UDFs to efficiently load data files.</li>
+                        <li>Developed the presentation layer using HTML, CSS, JSPs, Bootstrap, and AngularJS.</li>
+                        <li>Applied J2EE design patterns such as DTO, DAO, Command, and Singleton for better code organization and maintenance.</li>
+                        <li>Implemented Object-Relation Mapping (ORM) in the persistence layer using Hibernate framework integrated with Spring functionality.</li>
+                    </ul>
                  </div>
             </div>
         </div>
