--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="img-hero">
-            <img src="image.png" alt="">
+            <img src="WhatsApp Image 2024-04-16 at 12.38.45_9a1b6c34.jpg" alt="">
             <div class="rotate-text">
                 <div class="text">
                     <p>I'm Data Engineer</p>
